# GRPC-Message-HUB

./: Cargo.toml  build.rs
proto/: msg_hub.proto
src/: hub.rs  hub_client.rs
