[package]
name = "grpc_msg_hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "msg-hub"
path = "src/hub.rs"

[[bin]]
name = "msg-hub-client"
path = "src/hub_client.rs"

[dependencies]
tonic = "0.7"
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.10"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio-rustls = "*"
hyper-rustls = { version = "0.23", features = ["http2"] }
rustls-pemfile = "*"
tower-http = { version = "0.3", features = ["add-extension", "util"] }


[build-dependencies]
tonic-build = "0.7"
